finished most styling and logic. now adding delete function

--- a/gallery/src/css/main.css
+++ b/gallery/src/css/main.css
@@ -3,4 +3,143 @@
   margin: 0;
   box-sizing: border-box;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 16px;
+}
+
+.gallery {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 85dvw;
+  padding: 1rem;
+  margin: 0 auto;
+}
+
+.gallery__headline {
+  font-size: 3rem;
+  font-weight: 700;
+}
+
+.gallery__subHeadline {
+  font-weight: 600;
+  margin-top: 1rem;
+}
+
+.gallery__area {
+  margin-top: 3rem;
+  background-color: red;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.gallery__card {
+  width: 15dvw;
+  height: 30dvh;
+  position: relative;
+  margin: 1rem;
+}
+
+.gallery__cardBack {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: antiquewhite;
+  height: 100%;
+  width: 100%;
+  display: none;
+}
+
+.gallery__title {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  color: #333;
+  padding: .25rem;
+}
+
+.gallery__titleFader {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 40%;
+  width: 100%;
+  background: linear-gradient(to bottom, transparent 0%, white 100%);
+}
+
+.gallery__image {
+  width: 100%;
+  height: 100%;
+}
+
+.gallery__delete::after {
+  content: 'X';
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 1rem;
+  width: 1rem;
+  margin: .5rem;
+}
+
+.search {
+  display: flex;
+  margin-top: 2rem;
+}
+
+.search__label {
+  display: none;
+}
+
+.search__input {
+  width: 30vw;
+  border: 2px solid lightcoral;
+  border-right: 0px;
+  background-color: lightcoral;
+  color: white;
+  border-top-left-radius: 25px;
+  border-bottom-left-radius: 25px;
+  padding: .5rem;
+  height: 2.5rem;
+}
+
+.search__input::placeholder {
+  color: white;
+}
+
+.search__input:focus-visible {
+  border: 2px solid darkred;
+  border-right: 0px;
+  outline: none;
+}
+
+.search__button {
+  width: 5rem;
+  height: 2.5rem;
+  border-top-right-radius: 25px;
+  border-bottom-right-radius: 25px;
+  border: none;
+  background-color: darkred;
+  color: white;
+  cursor: pointer;
+}
+
+.search__button:hover {
+  background-color: darkred;
+}
+
+.fetch__box {
+  display: flex;
+  width: 100%;
+}
+
+.fetch__card {
+  width: 15dvw;
+  height: 30dvh;
+  margin: 1rem;
+}
+
+.fetch__image {
+  width: 100%;
+  height: 100%;
 }
