--- a/gallery/src/css/main.scss
+++ b/gallery/src/css/main.scss
@@ -3,4 +3,139 @@
     margin: 0;
     box-sizing: border-box;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 16px;
+}
+
+.gallery {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 85dvw;
+    padding: 1rem;
+    margin: 0 auto;
+
+    &__headline {
+        font-size: 3rem;
+        font-weight: 700;
+    }
+    &__subHeadline {
+        font-weight: 600;
+        margin-top: 1rem;
+    }
+    &__area {
+        margin-top: 3rem;
+        background-color: red;
+        display: flex;
+        flex-wrap: wrap;
+    }
+    &__card {
+        width: 15dvw;
+        height: 30dvh;
+        position: relative;
+        margin: 1rem;
+    }
+    &__cardBack {
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-color: antiquewhite;
+        height: 100%;
+        width: 100%;
+
+        display: none;
+    }
+    &__title {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        color: #333;
+        padding: .25rem;        
+    }
+    &__titleFader {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        height: 40%;
+        width: 100%;
+        background: linear-gradient(to bottom, transparent 0%,white 100%);
+    }
+    &__image {
+        width: 100%;
+        height: 100%;
+    }
+    &__delete {
+        &::after {
+            content: 'X';
+            position: absolute;
+            top: 0;
+            right: 0;
+            height: 1rem;
+            width: 1rem;
+            margin: .5rem;
+        }
+    }
+}
+
+.search {
+    display: flex;
+    margin-top: 2rem;
+    
+    &__label {
+        display: none;
+    }
+
+    &__input {
+        width: 30vw;
+        border: 2px solid lightcoral;
+        border-right: 0px;
+        background-color: lightcoral;
+        color: white;
+        border-top-left-radius: 25px;
+        border-bottom-left-radius: 25px;
+        padding: .5rem;
+        
+        height: 2.5rem;
+
+        &::placeholder {
+            color: white;
+        }
+        &:focus-visible {
+            border: 2px solid darkred;
+            border-right: 0px;
+            outline: none;
+        }
+    }
+
+    &__button {
+        width: 5rem;
+        height: 2.5rem;
+        border-top-right-radius: 25px;
+        border-bottom-right-radius: 25px;
+        border: none;
+        background-color: darkred;
+        color: white;
+        cursor: pointer;
+
+        &:hover {
+            background-color: darkred;
+        }
+    }
+}
+
+.fetch {
+    &__box {
+        display: flex;
+        width: 100%;
+    }
+    &__card {
+        width: 15dvw;
+        height: 30dvh;
+        margin: 1rem;
+        
+    }
+    &__image {
+        width: 100%;
+        height: 100%;
+    }
 }
