--- a/gallery/src/css/main.css
+++ b/gallery/src/css/main.css
@@ -28,26 +28,38 @@
 
 .gallery__area {
   margin-top: 3rem;
-  background-color: red;
   display: flex;
   flex-wrap: wrap;
 }
 
 .gallery__card {
   width: 15dvw;
-  height: 30dvh;
+  height: 33dvh;
   position: relative;
   margin: 1rem;
+  transform-style: preserve-3d;
+  transition: all 2s ease;
+}
+
+.gallery__cardFront {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  backface-visibility: hidden;
 }
 
 .gallery__cardBack {
   position: absolute;
   top: 0;
   left: 0;
-  background-color: antiquewhite;
   height: 100%;
   width: 100%;
-  display: none;
+  backface-visibility: hidden;
+  background-color: antiquewhite;
+  transform: rotateY(180deg);
+  display: flex;
 }
 
 .gallery__title {
@@ -70,6 +82,7 @@
 .gallery__image {
   width: 100%;
   height: 100%;
+  backface-visibility: hidden;
 }
 
 .gallery__delete::after {
@@ -80,6 +93,10 @@
   height: 1rem;
   width: 1rem;
   margin: .5rem;
+}
+
+.spinner {
+  transform: rotateY(180deg);
 }
 
 .search {
