--- a/gallery/src/css/main.scss
+++ b/gallery/src/css/main.scss
@@ -25,25 +25,36 @@
     }
     &__area {
         margin-top: 3rem;
-        background-color: red;
         display: flex;
         flex-wrap: wrap;
     }
     &__card {
         width: 15dvw;
-        height: 30dvh;
+        height: 33dvh;
         position: relative;
         margin: 1rem;
+        transform-style: preserve-3d;
+        transition: all 2s ease;
+    }
+    &__cardFront {
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        backface-visibility: hidden;
     }
     &__cardBack {
         position: absolute;
         top: 0;
         left: 0;
-        background-color: antiquewhite;
         height: 100%;
         width: 100%;
+        backface-visibility: hidden;
+        background-color: antiquewhite;
+        transform: rotateY(180deg);
+        display: flex;
 
-        display: none;
     }
     &__title {
         position: absolute;
@@ -63,6 +74,7 @@
     &__image {
         width: 100%;
         height: 100%;
+        backface-visibility: hidden;
     }
     &__delete {
         &::after {
@@ -75,6 +87,10 @@
             margin: .5rem;
         }
     }
+}
+
+.spinner {
+    transform: rotateY(180deg);
 }
 
 .search {
