--- a/gallery/src/css/main.css
+++ b/gallery/src/css/main.css
@@ -41,7 +41,7 @@
   transition: all 2s ease;
 }
 
-.gallery__cardFront {
+.gallery__cardBack, .gallery__cardFront {
   position: absolute;
   top: 0;
   left: 0;
@@ -51,15 +51,16 @@
 }
 
 .gallery__cardBack {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  backface-visibility: hidden;
   background-color: antiquewhite;
   transform: rotateY(180deg);
   display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 2rem;
+}
+
+.gallery__author {
+  margin-top: 1rem;
 }
 
 .gallery__title {
@@ -85,14 +86,15 @@
   backface-visibility: hidden;
 }
 
-.gallery__delete::after {
-  content: 'X';
+.gallery__delete {
   position: absolute;
   top: 0;
   right: 0;
   height: 1rem;
   width: 1rem;
   margin: .5rem;
+  background: rgba(255, 255, 255, 0.5);
+  border-radius: .25rem;
 }
 
 .spinner {
@@ -159,4 +161,13 @@
 .fetch__image {
   width: 100%;
   height: 100%;
+}
+
+.fetch__input {
+  width: 100%;
+  border: 1px solid black;
+}
+
+.fetch__input::placeholder {
+  padding: .25rem;
 }
