--- a/gallery/src/css/main.scss
+++ b/gallery/src/css/main.scss
@@ -36,6 +36,7 @@
         transform-style: preserve-3d;
         transition: all 2s ease;
     }
+    &__cardBack,
     &__cardFront {
         position: absolute;
         top: 0;
@@ -45,16 +46,18 @@
         backface-visibility: hidden;
     }
     &__cardBack {
-        position: absolute;
-        top: 0;
-        left: 0;
-        height: 100%;
-        width: 100%;
-        backface-visibility: hidden;
         background-color: antiquewhite;
         transform: rotateY(180deg);
         display: flex;
-
+        flex-direction: column;
+        justify-content: space-between;
+        padding: 2rem;
+    }
+    &__description {
+        
+    }
+    &__author {
+        margin-top: 1rem;
     }
     &__title {
         position: absolute;
@@ -77,15 +80,14 @@
         backface-visibility: hidden;
     }
     &__delete {
-        &::after {
-            content: 'X';
-            position: absolute;
-            top: 0;
-            right: 0;
-            height: 1rem;
-            width: 1rem;
-            margin: .5rem;
-        }
+        position: absolute;
+        top: 0;
+        right: 0;
+        height: 1rem;
+        width: 1rem;
+        margin: .5rem;
+        background: rgba(255,255,255,.5);
+        border-radius: .25rem;
     }
 }
 
@@ -153,5 +155,13 @@
     &__image {
         width: 100%;
         height: 100%;
+    }
+    &__input {
+        width: 100%;
+        border: 1px solid black;
+
+        &::placeholder {
+            padding: .25rem;
+        }
     }
 }
